increased break points to prevent overflow

--- a/sass/blocks/default/backend.scss
+++ b/sass/blocks/default/backend.scss
@@ -145,7 +145,7 @@
 					}
 				}
 
-				@media ( max-width: 430px ) {
+				@media ( max-width: 480px ) {
 					width: 100%;
 				}
 			}
