--- a/sass/blocks/default/utils/mixins.scss
+++ b/sass/blocks/default/utils/mixins.scss
@@ -96,7 +96,7 @@
 	margin: 0 -4px;
 	padding: var( --srfm-multi-choice-outer-padding ) 0;
 
-	@media ( min-width: 431px ) {
+	@media ( min-width: 481px ) {
 		&.srfm-choice-width-100 {
 			.srfm-multi-choice-single {
 				width: 100%;
